module-5-assessment-1 submission

--- a/earth.html
+++ b/earth.html
@@ -30,11 +30,12 @@
                     <source src="videos/earth-video.mp4" type="video/mp4">
                 </video>
 
-BOTTOM TABS
 
+<div id="tabs-bottom">
 <a href="venus.html">Venus</a>
 <a href="index.html">Home</a>
 <a href="mars.html">Mars</a>
+     </div> 
 </div>
     </div>
     
