--- a/jupiter.html
+++ b/jupiter.html
@@ -35,12 +35,12 @@
                     <source src="videos/jupiter-video.mp4" type="video/mp4">
                 </video>
 
-BOTTOM TABS
 
+<div id="tabs-bottom">
 <a href="mars.html">Mars</a>
 <a href="index.html">Home</a>
 <a href="saturn.html">Saturn</a>
-        
+         </div> 
             </div>
     </div>
      </body>
