--- a/mercury.html
+++ b/mercury.html
@@ -33,12 +33,12 @@
                     <source src="videos/mercury-video.mp4" type="video/mp4">
                 </video>
 
-BOTTOM TABS
 
+<div id="tabs-bottom">
 <a href="sun.html">Sun</a>
 <a href="index.html">Home</a>
 <a href="venus.html">Venus</a>
-        
+      </div>  
         
         </div>
     </div>
