--- a/neptune.html
+++ b/neptune.html
@@ -33,12 +33,12 @@
                 <video id="video" controls>
                     <source src="videos/neptune-video.mp4" type="video/mp4">
                 </video>
-BOTTOM TABS
 
+<div id="tabs-bottom">
 <a href="uranus.html">Uranus</a>
 <a href="index.html">Home</a>
 <a href="sun.html">Sun</a>
-
+</div>
 </div>
     </div>
     
