--- a/saturn.html
+++ b/saturn.html
@@ -32,11 +32,12 @@
                 <video id="video" controls>
                     <source src="videos/saturn-video.mp4" type="video/mp4">
                 </video>
-BOTTOM TABS
 
+<div id="tabs-bottom">
 <a href="jupiter.html">Jupiter</a>
 <a href="index.html">Home</a>
 <a href="uranus.html">Uranus</a>
+    </div>
         </div>
     </div>
     
