--- a/uranus.html
+++ b/uranus.html
@@ -33,11 +33,12 @@
                 <video id="video" controls>
                     <source src="videos/uranus-video.mp4" type="video/mp4">
                 </video>
-BOTTOM TABS
 
+<div id="tabs-bottom">
 <a href="saturn.html">Saturn</a>
 <a href="index.html">Home</a>
 <a href="neptune.html">Neptune</a>
+     </div>
 </div>
     </div>
     
