--- a/venus.html
+++ b/venus.html
@@ -31,14 +31,13 @@
                     <source src="videos/venus-video.mp4" type="video/mp4">
                 </video>
 
-BOTTOM TABS
 
+<div id="tabs-bottom">
 <a href="mercury.html">Mercury</a>
 <a href="index.html">Home</a>
 <a href="earth.html">Earth</a>
-</div>
+      </div>    
+</div> 
     </div>
-    
-    
-     </body>
+    </body>
 </html>
